# instance_code

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
derive/tests/: derive.rs  mod.rs
src/: alloc.rs  lib.rs  primitives.rs
src/impls/: mod.rs  phf.rs  smol_str.rs
