[package]
name = "instance_code_derive"
description = "Derive macro for instance_code"
version = "0.1.0"
categories.workspace = true
keywords.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
serde = "1.0.203"
serde_json = "1.0.118"
syn.workspace = true
synstructure.workspace = true
tempfile = "3.10.1"

[dev-dependencies]
instance_code = { workspace = true, features = ["derive"] }
